--- a/SFDL.NET 3/SettingsWindow.xaml
+++ b/SFDL.NET 3/SettingsWindow.xaml
@@ -15,10 +15,10 @@
     GlowBrush="{DynamicResource AccentColorBrush2}"
     Icon="Resources/Icons/appbar.settings.png"
     IsMaxRestoreButtonEnabled="False"
+    ResizeMode="NoResize"
     SaveWindowPosition="True"
     SizeToContent="WidthAndHeight"
     WindowStartupLocation="CenterOwner"
-    ResizeMode="NoResize"
     mc:Ignorable="d">
 
     <Window.Resources>
@@ -72,6 +72,27 @@
 
         </ResourceDictionary>
     </Window.Resources>
+
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button Command="{Binding ResetSettingsCommand}">
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle
+                        Width="16"
+                        Height="16"
+                        Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                        <Rectangle.OpacityMask>
+                            <VisualBrush Stretch="Uniform" Visual="{StaticResource appbar_reset}" />
+                        </Rectangle.OpacityMask>
+                    </Rectangle>
+                    <TextBlock
+                        Margin="4,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="{x:Static p:Strings.Settings_ResetSettings}" />
+                </StackPanel>
+            </Button>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
 
     <Grid>
         <StackPanel>
@@ -250,7 +271,7 @@
                                             <Separator Margin="3,5,3,5" />
                                             <Label Content="{x:Static p:Strings.Settings_ExcludeFiles}" />
 
-                                            <StackPanel Orientation="Horizontal" MaxHeight="120">
+                                            <StackPanel MaxHeight="120" Orientation="Horizontal">
 
                                                 <ListBox
                                                     MinWidth="350"
@@ -348,7 +369,7 @@
                                 Header="{x:Static p:Strings.Settings_UnrarSettings}">
                                 <Grid>
                                     <StackPanel Orientation="Horizontal">
-                                        <StackPanel >
+                                        <StackPanel>
 
                                             <CheckBox
                                                 x:Name="ChkExtractArchives"
@@ -640,6 +661,27 @@
                                                     </MenuItem>
 
                                                 </MenuItem>
+                                                <MenuItem
+                                                    Height="19"
+                                                    Margin="13,0,0,0"
+                                                    HorizontalAlignment="Center"
+                                                    VerticalAlignment="Center"
+                                                    Command="{Binding ResetSpeedreportCommand}"
+                                                    Header="{x:Static p:Strings.Settings_ResetSpeedreport}">
+
+                                                    <MenuItem.Icon>
+                                                        <Rectangle
+                                                            Width="16"
+                                                            Height="16"
+                                                            Fill="{DynamicResource AccentColorBrush}">
+                                                            <Rectangle.OpacityMask>
+                                                                <VisualBrush Stretch="Uniform" Visual="{StaticResource appbar_reset}" />
+                                                            </Rectangle.OpacityMask>
+                                                        </Rectangle>
+                                                    </MenuItem.Icon>
+                                                </MenuItem>
+
+
                                             </Menu>
                                         </ToolBar>
                                         <TextBox
