Implemented Feature Request #150

--- a/SFDL.NET 3/SettingsWindow.xaml
+++ b/SFDL.NET 3/SettingsWindow.xaml
@@ -330,6 +330,12 @@
 
                                             </StackPanel>
 
+                                            <CheckBox
+                                                Margin="0,5,0,0"
+                                                Content="{x:Static p:Strings.Settings_ExcludeMalicious_FileExtensions}"
+                                                IsChecked="{Binding ExcludeMaliciousFileExtensions}"
+                                                ToolTip="Hiermit werden Dateindungen blockiert welche dafür bekannt sind schädlich zu sein. Dazu gehört z.B diue *.scr Endung" />
+
                                         </StackPanel>
 
 
