--- a/SFDL.NET 3/SettingsWindow.xaml
+++ b/SFDL.NET 3/SettingsWindow.xaml
@@ -334,7 +334,7 @@
                                                 Margin="0,5,0,0"
                                                 Content="{x:Static p:Strings.Settings_ExcludeMalicious_FileExtensions}"
                                                 IsChecked="{Binding ExcludeMaliciousFileExtensions}"
-                                                ToolTip="Hiermit werden Dateindungen blockiert welche dafür bekannt sind schädlich zu sein. Dazu gehört z.B diue *.scr Endung" />
+                                                ToolTip="{x:Static p:Strings.Settings_ExcludeMalicious_FileExtensions_ToolTip}" />
 
                                         </StackPanel>
 
