Fixed some issues with long file names (> 255)

--- a/SFDL.NET 3/MainWindow.xaml
+++ b/SFDL.NET 3/MainWindow.xaml
@@ -723,7 +723,7 @@
                     x:Name="ListView_DownloadItems"
                     MinHeight="250"
                     dng:DropBehavior.PreviewDropCommand="{Binding PreviewDropCommand}"
-                    ItemsSource="{Binding DownloadItems, IsAsync=True}"
+                    ItemsSource="{Binding DownloadItems}"
                     PreviewKeyUp="OnGridKeyUp"
                     SelectionMode="Extended">
 
