Optimized XAML Converter for grouping

--- a/SFDL.NET 3/MainWindow.xaml
+++ b/SFDL.NET 3/MainWindow.xaml
@@ -933,7 +933,7 @@
                                 <Style TargetType="{x:Type GroupItem}">
                                     <Setter Property="Template">
                                         <Setter.Value>
-                                            <ControlTemplate>
+                                            <ControlTemplate TargetType="{x:Type GroupItem}">
                                                 <Expander Margin="0,3" IsExpanded="True" Controls:GroupBoxHelper.HeaderForeground="{DynamicResource WhiteBrush}">
                                                     <Expander.Header>
                                                         <DockPanel LastChildFill="False">
